[gd_scene load_steps=2 format=3 uid="uid://clrervo6ig63f"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_sqlud"]

[node name="GameOver" type="CanvasLayer"]
unique_name_in_owner = true
visible = false
script = ExtResource("1_sqlud")

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)
metadata/_edit_use_anchors_ = true

[node name="GameOverText" type="Label" parent="ColorRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "GAME OVER"
metadata/_edit_use_anchors_ = true

[node name="Score" type="Label" parent="ColorRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.5
offset_top = 285.0
offset_right = 340.5
offset_bottom = 390.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 76
text = "Nombre de kills : 0"
metadata/_edit_use_anchors_ = true

[node name="BestScore" type="Label" parent="ColorRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -308.0
offset_top = 110.0
offset_right = 373.0
offset_bottom = 215.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 76
text = "Meilleur score : 0"
metadata/_edit_use_anchors_ = true

[node name="StartOver2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -325.0
offset_right = 60.0
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Recommencer"
metadata/_edit_use_anchors_ = true
